--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "@supabase/supabase-js": "^2.50.3",
-    "axios": "^1.10.0",
-    "cheerio": "^1.1.0",
-    "dotenv": "^17.0.1",
-    "jsdom": "^22.1.0",
-    "node-fetch": "^3.3.2",
-    "openai": "^4.104.0"
-  }
+"dependencies": {
+  "@supabase/supabase-js": "^2.50.3",
+  "axios": "^1.10.0",
+  "cheerio": "^1.1.0",
+  "dotenv": "^17.0.1",
+  "jsdom": "^22.1.0",
+  "node-fetch": "^3.3.2",
+  "openai": "^4.104.0",
+  "slugify": "^1.6.6"
 }
